[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openops-mcp"
version = "0.1.0"
description = "FastMCP server for OpenOps"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "fastmcp>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
] 